edit: information about

--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
                     <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s" data-en="Ulyana Zhidko" data-ru="Ульяна Жидко">Ульяна Жидко</h1>
 
                     <div class="hero-about wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
-                        <span data-en="Frontend developer, web designer" data-ru="Frontend-разработчик, web-дизайнер">
-                            Frontend-разработчик, web-дизайнер
+                        <span data-en="Frontend developer, Digital Designer" data-ru="Frontend-разработчик, Digital-дизайнер">
+                            Frontend-разработчик, Digital-дизайнер
                         </span>
                         <div class="relocation">
                             <div class="relocate-item ">
                                 <svg width="22" height="22" class="relocation-icon">
                                     <use xlink:href="img/icons.svg#home"></use>
                                 </svg>
-                                <p class="hero-discription" data-en="Belarus, Minsk." data-ru="Беларусь Минск.">
-                                    Беларусь Минск.
+                                <p class="hero-discription" data-en="Belarus, Minsk." data-ru="Беларусь, Минск.">
+                                    Беларусь, Минск.
                                 </p>
                             </div>
 
@@ -103,8 +103,8 @@
                                 <svg width="22" height="22" class="relocation-icon">
                                     <use xlink:href="img/icons.svg#location"></use>
                                 </svg>
-                                <p class="hero-discription" data-en="Uzbekistan Tashkent." data-ru="Узбекистан Ташкент.">
-                                    Узбекистан Ташкент.
+                                <p class="hero-discription" data-en="Uzbekistan, Tashkent." data-ru="Узбекистан, Ташкент.">
+                                    Узбекистан, Ташкент.
                                 </p>
                             </div>
 
@@ -143,10 +143,10 @@
 
                         <div class="skills-project">
                             <div class="skill-bar">
-                                <div class="bar skill-1" data-en="32 projects" data-ru="32 проекта">32 проекта</div>
+                                <div class="bar skill-1" data-en="33 projects" data-ru="33 проекта">33 проекта</div>
                             </div>
                             <div class="skill-bar">
-                                <div class="bar skill-2" data-en="14 projects" data-ru="14 проектов">14 проектов</div>
+                                <div class="bar skill-2" data-en="15 projects" data-ru="15 проектов">15 проектов</div>
                             </div>
                             <div class="skill-bar">
                                 <div class="bar skill-3" data-en="36 projects" data-ru="36 проектов">36 проектов</div>
