edit: project name

--- a/index.html
+++ b/index.html
@@ -333,16 +333,18 @@
 
                             <div class="card-text">
                                 <div class="card-heading">
-                                    <h3 class="card-title" data-en="Design project «Suprematism»" data-ru="Дизайн-проект «Супрематизм»">Дизайн-проект «Супрематизм»</h3>
+                                    <h3 class="card-title" data-en="Web application «Suprematism»" data-ru="Веб-приложение «Супрематизм»">Веб-приложение «Супрематизм»</h3>
                                 </div>
 
                                 <div class="card-info">
                                     <div class="category">
                                         <h4 class="project-subtitle card-susubtitle" data-en="Tools:" data-ru="Инструменты:">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">HTML/CSS</p>
+                                        <p class="project-paragraph about-box-text">JS</p>
+                                        <p class="project-paragraph about-box-text">Figma</p>
                                         <p class="project-paragraph about-box-text">Adobe Illustrator</p>
                                         <p class="project-paragraph about-box-text">Adobe Photoshop</p>
                                         <p class="project-paragraph about-box-text">Adobe After Effects</p>
-                                        <p class="project-paragraph about-box-text">Figma</p>
                                         <p class="project-paragraph about-box-text">Wix</p>
                                     </div>
                                 </div>
