--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="burger-menu">
                 <a href="" class="burger-menu_button">
-                    <spun class="burger-menu_lines"></spun>
+                    <span class="burger-menu_lines"></span>
                 </a>
 
                 <nav class="burger-menu_nav">
