edit: work_experience, skill-bar add: card(DS)

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <div class="bar skill-3" data-en="36 projects" data-ru="36 проектов">36 проектов</div>
                             </div>
                             <div class="skill-bar">
-                                <div class="bar skill-4" data-en="18 projects" data-ru="18 проектов">18 проектов</div>
+                                <div class="bar skill-4" data-en="28 projects" data-ru="28 проектов">28 проектов</div>
                             </div>
                         </div>
                     </div>
@@ -185,16 +185,47 @@
                 <h2 class="section-title wow animate__animated animate__fadeInLeft" data-en="Work experience" data-ru="Опыт работы">
                     Опыт работы
                 </h2>
-                <div class="wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
+                <div class="work_experience wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
                     <blockquote>
                         <div class="blockquote_text">
                             <p>
-                                <b>Frontend Developer/Digital-дизайнер</b>
+                                <b>Digital-дизайнер</b>
+                            </p>
+                            <p>
+                                <a href="https://humans.uz/" target="_blank">Humans</a>
+                            </p>
+                            <span data-en="Full time:" data-ru="Полный рабочий день:">Полный рабочий день:</span>
+                            <span data-en="Oct. 2021 - till now (4 months)" data-ru="окт. 2022&nbsp;г. – наст. время (4 мес.)">окт. 2022&nbsp;г. – наст. время
+                                (4 мес.)</span>
+
+                            <ul class="blockquote_ul">
+                                <li data-en="Website development from scratch;" data-ru="Разработка веб-сайтов с нуля;">
+                                    Дизайн веб страниц сайтов Humans;
+                                </li>
+                                <li data-en="Editing existing site pages;" data-ru="Правка существующих страниц сайтов;">
+                                    Правка существующих страниц сайтов;
+                                </li>
+                                <li data-en="Editing existing site pages;" data-ru="Правка существующих страниц сайтов;">
+                                    Дизайн постов для социальных сетей;
+                                </li>
+                                <li data-en="Work with the content management system MODx (Evo) and WordPress;" data-ru="Работа с системой управления сайтом MODx (Evo) и WordPress;">
+                                    Дизайн рекламных материалов для цифровой и наружной рекламы.
+                                </li>
+                            </ul>
+                        </div>
+
+                    </blockquote>
+                </div>
+                <div class="work_experience wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
+                    <blockquote>
+                        <div class="blockquote_text">
+                            <p>
+                                <b>Digital-дизайнер/Frontend Developer</b>
                             </p>
                             <p>
                                 <a href="https://webmart.by/" target="_blank">Webmart Group</a>
                             </p>
-                            <span data-en="Full time" data-ru="Полный рабочий день">Полный рабочий день</span>
+                            <span data-en="Full time:" data-ru="Полный рабочий день:">Полный рабочий день:</span>
                             <span data-en="Feb. 2021 - Dec. 2021 (11 months)" data-ru="февр. 2021&nbsp;г. – дек. 2021&nbsp;г. (11 мес.)">февр. 2021&nbsp;г. – дек.
                                 2021&nbsp;г. (11 мес.)</span>
 
@@ -479,25 +510,27 @@
 
                     <div class="card filterDiv front">
                         <div class="card-project-block">
-                            <img class="card-project-image" src="img/project/Kuba.jpg" alt="Сайт путешествий по Кубе">
+                            <img class="card-project-image" src="img/project/DS.jpg" alt="Сайт системы мониторинга">
 
                             <div class="card-text">
                                 <div class="card-heading">
-                                    <h3 class="card-title" data-en="Cuba travel website" data-ru="Сайт путешествий по Кубе">
-                                        Сайт путешествий по Кубе
+                                    <h3 class="card-title" data-en="Monitoring system website" data-ru="Сайт системы мониторинга">
+                                        Сайт системы мониторинга
                                     </h3>
                                 </div>
 
                                 <div class="card-info">
                                     <div class="category">
                                         <h4 class="project-subtitle card-susubtitle" data-en="Tools:" data-ru="Инструменты:">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">Figma</p>
                                         <p class="project-paragraph about-box-text">HTML/CSS</p>
+                                        <p class="project-paragraph about-box-text">JS</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
                                 <div class="link-wrap">
-                                    <a class="block-link" href="https://ulyanazhidko.github.io/Kuba/" target="_blank" data-en="Look" data-ru="Посмотреть">Посмотреть</a>
+                                    <a class="block-link" href="https://ulyanazhidko.github.io/DS/index.html" target="_blank" data-en="Look" data-ru="Посмотреть">Посмотреть</a>
                                 </div>
                             </div>
                         </div>
