optimize img, mob-select btn

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     <a href="#contacts" class="burger-menu_link">Контакты</a>
 
 
-                    <div class="lang">
+                    <!-- <div class="lang">
                         <div class="lang_wrap">
                             <button class="lang_button">EN</button>
                         </div>
-                    </div>
+                    </div> -->
                 </nav>
 
                 <div class="burger-menu_overlay"></div>
