--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             </svg>
                         </a>
 
-                        <a href="www.behance.net/UlyanaZhydko" class="social-link" target="_blank">
+                        <a href="https://www.behance.net/ulyanaZhidko" class="social-link" target="_blank">
                             <svg width="22" height="22" class="social-link-icon">
                                 <use xlink:href="img/icons.svg#behance"></use>
                             </svg>
@@ -723,7 +723,7 @@
                             </svg>
                         </a>
 
-                        <a href="www.behance.net/UlyanaZhydko" class="social-link" target="_blank">
+                        <a href="https://www.behance.net/ulyanaZhidko" class="social-link" target="_blank">
                             <svg width="22" height="22" class="social-link-icon">
                                 <use xlink:href="img/icons.svg#behance"></use>
                             </svg>
